k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: api
    template:
        metadata:
            labels:
                component: api
        spec:
            containers:
                - name: api
                  image: korzhynskiy/user-service-api
                  ports:
                    - containerPort: 80
