k8s/command-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: command-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: command
    template:
        metadata:
            labels:
                component: command
        spec:
            containers:
                - name: command
                  image: korzhynskiy/user-service-command
