k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: gateway-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: gateway
    template:
        metadata:
            labels:
                component: gateway
        spec:
            containers:
                - name: gateway
                  image: korzhynskiy/gateway
                  ports:
                    - containerPort: 80
