k8s/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: kafka-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: kafka
    template:
        metadata:
            labels:
                component: kafka
        spec:
            containers:
                - name: kafka
                  image: wurstmeister/kafka:2.11-2.0.1
                  ports:
                    - containerPort: 9092
                    - containerPort: 9093
