k8s/query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: query-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: query
    template:
        metadata:
            labels:
                component: query
        spec:
            containers:
                - name: query
                  image: korzhynskiy/user-service-query
                  ports:
                    - containerPort: 80
