k8s/zookeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: zookeeper-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: zookeeper
    template:
        metadata:
            labels:
                component: zookeeper
        spec:
            containers:
                - name: zookeeper
                  image: wurstmeister/zookeeper
                  ports:
                    - containerPort: 2181
