k8s/gateway-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: gateway-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: gateway
    ports:
        - port: 30005
          targetPort: 80
