k8s/gateway-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-node-port
spec:
  type: NodePort
  ports:
    - port: 30005
      targetPort: 80
      nodePort: 30005
  selector:
    component: gateway
