k8s/kafka-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: kafka-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: kafka
    ports:
        - port: 9093
          targetPort: 9093
