k8s/query-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: query-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: query
    ports:
        - port: 80
          targetPort: 80
