k8s/zookeeper-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: zookeeper-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: zookeeper
    ports:
        - port: 2181
          targetPort: 2181
